--- a/.htaccess
+++ b/.htaccess
@@ -10,8 +10,8 @@ RewriteRule (.*?)server_qval/index\.php/*(.*) $1$2 [R=301,NE,L]
 # Directs all EE web requests through the site index file
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ qval/qval_web/serverqval/index.php?/$1 [L]
+#RewriteRule ^(.*)$ qval/qval_web/serverqval/index.php?/$1 [L]
 #RewriteRule ^(.*)$ qval/web/serverqval/index.php?/$1 [L]
-#RewriteRule ^(.*)$ server_qval/index.php?/$1 [L]
+RewriteRule ^(.*)$ server_qval/index.php?/$1 [L]
 </IfModule>
 php_value short_open_tag 1
