--- a/.htaccess
+++ b/.htaccess
@@ -5,8 +5,8 @@ RewriteBase /
 RewriteCond %{THE_REQUEST} ^GET.*index\.php [NC]
 RewriteCond %{REQUEST_URI} !/system/.* [NC]
 #RewriteRule (.*?)qval/qval_web/serverqval/index\.php/*(.*) $1$2 [R=301,NE,L]
-RewriteRule (.*?)server_qval/index\.php/*(.*) $1$2 [R=301,NE,L]
-#RewriteRule (.*?)qval/web/serverqval/index\.php/*(.*) $1$2 [R=301,NE,L]
+#RewriteRule (.*?)server_qval/index\.php/*(.*) $1$2 [R=301,NE,L]
+RewriteRule (.*?)qval/web/serverqval/index\.php/*(.*) $1$2 [R=301,NE,L]
 # Directs all EE web requests through the site index file
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
